fixed border behind card and backImage width

--- a/css/pokemon.css
+++ b/css/pokemon.css
@@ -56,7 +56,7 @@ button {
 .scene {
     width: 200px;
     height: 260px;
-    border: 1px solid #CCC;
+    /* border: 1px solid #CCC; */
     margin: 40px 0;
     perspective: 600px;
     border-radius: 5%;
@@ -103,8 +103,8 @@ button {
   position: absolute;
   left: 0;
   opacity: 0.33;
-  height: 258px;
-  width: 198px;
+  /* height: 258px;
+  width: 198px; */
   border-radius: 5%;
 }
 
